# voxel-carving-for-games

./: .gitignore  CMakeLists.txt  Camera.h  MarchingCubes2.h  MeshSmoothing.h  RBF.h  README.md  TransformVertexShader.vertexshader  TutteEmbedding.h  Volume.h  beetle.ply  beetleOut.mtl  export.cpp  export.h  main.cpp
utils/: Camera.h  utils.cpp  utils.h
voxel/: MarchingCubes.h  SimpleMesh.h  SpaceCarver.h  VoxelGrid.h  VoxelGridExporter.h
